sumo/tests/sumo/output/meandata_edgebased/errors/missing_end1/options.sumo
--no-duration-log --net-file=net.net.xml --routes=input_routes.rou.xml --dump-basename=aggregated --dump-intervals="15,60,300,900" -b 0 -e 10000 --dump-begins "0,900" --dump-ends 119

